--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -181,3 +181,13 @@ div.field, div.actions {
   font-size: 12px;
   list-style: square;
 }
+
+/* Users list */
+
+ul.users {
+  margin-top: 1em;
+}
+
+.users li {
+  list-style: none;
+}
